--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,14 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  fonts:
+    - family: Gotham
+      fonts:
+        - asset: assets/font/gotham_bold.ttf
+    
+
+assets:
+  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
